--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sa">
 <head>
   <meta charset="UTF-8">
-  <title>संस्कृत परीक्षा</title>
+  <title>sanskrit picture name</title>
       
   <style>
     body {
@@ -40,7 +40,7 @@
       100% { opacity: 0; }
     }
     .container {
-      padding: 20px;
+      padding: 20px auto;
     }
     .question {
       margin: 20px auto;
@@ -159,8 +159,8 @@
 </head>
 <body>
   <header>
-    <h1>पि. एम्. श्री. राजाचैतन्यदेवनोडालसर्वकारीयउच्चविद्यालयः, नवरङ्गपुरम्</h1>
-    <h2>जयतु भारतम् &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;आधुनिककक्षायां सुस्वागतम्  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;जयतु संस्कृतम्</h2>
+    <h1></h1>
+    <h1>जयतु भारतम् &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;आधुनिककक्षायां सुस्वागतम्  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;जयतु संस्कृतम्</h1>
   </header>
 
   <div class="container">
@@ -245,7 +245,7 @@ questions.forEach(q => {
       div.id = 'q'+(i+1);
       div.innerHTML = `
         <div class='q-header'>
-          <h3>Q${i+1}. संस्कृत नाम चयनं करोतु। (ସଂସ୍କୃତ ନାମ ଚୟନ କର)</h3>
+          <h3>Q${i+1}. चित्रं दृष्ट्वा संस्कृतनाम चयनं करोतु। (ଚିତ୍ର ଦେଖି ସଂସ୍କୃତ ନାମ ଚୟନ କର)</h3>
         </div>
         <div class='emoji' aria-hidden='true'>${q.emoji}</div>
         <div class='options'>
@@ -344,3 +344,4 @@ questions.forEach(q => {
   </script>
 </body>
 </html>
+
