--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sa">
 <head>
   <meta charset="UTF-8">
-  <title>sanskrit picture name</title>
+  <title>chose sanskrit picture by their name</title>
       
   <style>
     body {
@@ -45,15 +45,15 @@
     .question {
       margin: 20px auto;
       background: #fff3e0;
-      padding: 20px;
+      padding: 20px auto;
       border-radius: 12px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      max-width: 600px;
+      max-width: 800px;
       display: none;
       text-align: center;
     }
     .emoji {
-      font-size: 40px;
+      font-size: 80px;
       margin: 10px auto;
       animation: bounceZoom 2s infinite;
     }
@@ -71,9 +71,9 @@
       padding: 12px;
       border-radius: 10px;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 20px;
       transition: transform 0.2s, background 0.2s;
-      max-width: 400px;
+      max-width: 400px auto;
     }
     .quiz-option:hover {
       background: #f5b041;
@@ -109,12 +109,12 @@
       background: #fff3e0;
       padding: 20px;
       border-radius: 12px;
-      max-width: 900px;
+      max-width: 900px auto;
       margin: 20px auto;
       text-align: left;
     }
     .emoji-small {
-      font-size: 30px;
+      font-size: 60px auto;
     }
     .answer-block{
       border-bottom:1px solid #ccc;
@@ -135,7 +135,7 @@
       border-radius: 20px;
       box-shadow: 0 0 30px rgba(0,0,0,0.3);
       text-align: center;
-      font-size: 24px;
+      font-size: 34px;
       color: #e67e22;
       animation: none;
       z-index: 9999;
@@ -344,4 +344,5 @@ questions.forEach(q => {
   </script>
 </body>
 </html>
+
 
