--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@ const questions=[
   {"text": "ଜନ୍ମଭୂମି ପ୍ରବନ୍ଧଟିରେ ଲେଖକ କାହାର ପ୍ରକୃତ ଅର୍ଥ ସନ୍ଧାନ କରିଛନ୍ତି?", "options": ["ଜନ୍ମଭୂମି", "ସହର", "ଗ୍ରାମ", "ପାଶ୍ଚାତ୍ୟ ନଗର"], "answer": 0},
   {"text": "ଲେଖକ କାହାକୁ ନିଜର ମାତା, ଧାତ୍ରୀ ଓ ଶିକ୍ଷୟିତ୍ରୀ ବୋଲି କହିଛନ୍ତି?", "options": ["ଓଡ଼ିଶା", "ପଲ୍ଲୀଗ୍ରାମ", "ଭାରତ", "ପୃଥିବୀ"], "answer": 1},
   {"text": "ଲେଖକଙ୍କର ସମ୍ବନ୍ଧ କାହା ସହିତ କ୍ଷୀଣ ହେବାକୁ ଲାଗିଛି?", "options": ["ପଲ୍ଲୀ", "ସହର", "ମାତୃଭୂମି", "ଜନନୀ"], "answer": 0},
-  {"text": "ପ୍ରାବନ୍ଧିକ ଆୟକୁ ଜାହା ସହିତ ତୁଳନା କରିଛନ୍ତି?", "options": ["ସୂର୍ଯ୍ୟଙ୍କ ସହ", "ଚନ୍ଦ୍ରଙ୍କ ସହ", "ଶିବଙ୍କ ସହ", "ବୃହସ୍ପତିଙ୍କ ସହ"], "answer": 0},
+  {"text": "ପ୍ରାବନ୍ଧିକ ଆୟୁକୁ କାହା ସହିତ ତୁଳନା କରିଛନ୍ତି?", "options": ["ସୂର୍ଯ୍ୟଙ୍କ ସହ", "ଚନ୍ଦ୍ରଙ୍କ ସହ", "ଶିବଙ୍କ ସହ", "ବୃହସ୍ପତିଙ୍କ ସହ"], "answer": 0},
   {"text": "ଲେଖକଙ୍କର ପଲ୍ଲୀ ପ୍ରତି ଏକମାତ୍ର କର୍ତ୍ତବ୍ୟ କ'ଣ?", "options": ["ଗ୍ରାମକୁ ଅର୍ଥଦାନ", "ଗ୍ରାମରେ ରହିବା", "ଜନ୍ମସ୍ଥାନ ପଲ୍ଲୀଭୂମିର ସେବା କରିବା", "ଗ୍ରାମଠୁ ଦୂରେଇ ଯିବା"], "answer": 2},
   {"text": "ଶିକ୍ଷା ସମାପନ ସହିତ ଶିକ୍ଷିତମାନଙ୍କର ଏକ ପ୍ରକାର କ'ଣ ଘଟିଥାଏ?", "options": ["ପୁନର୍ଜନ୍ମ", "ଜୀବିକାର୍ଜନ", "ଜାତିସ୍ମର", "ଧର୍ମାନ୍ତର"], "answer": 0},
-  {"text": "ପଲ୍ଲୀର ନରନାରୀଙ୍କ ମଧ୍ୟରେ କେଉଁ ପରମ୍ପରା ଗଢ଼ି ଉଠିଥାଏ?", "options": ["ସ୍ବାର୍ଥପରତା", "ସହରୀ ପରମ୍ପରା", "ଏକ ପରିବାରତ୍ବ", "ଯୌଥ ପରିବାରତ୍ବ"], "answer": 2},
+  {"text": "ପଲ୍ଲୀର ନରନାରୀଙ୍କ ମଧ୍ୟରେ କେଉଁ ପରମ୍ପରା ଗଢ଼ି ଉଠିଥାଏ?", "options": ["ସ୍ବାର୍ଥପରତା", "ସହରୀ ପରମ୍ପରା", "ଏକ ପରିବାରତ୍ୱ", "ଯୌଥ ପରିବାରତ୍ୱ"], "answer": 2},
   {"text": "ସାର ମାଉସୀ ଗ୍ରାମ ମୁଣ୍ଡରେ କେଉଁଠାରେ ବହୁ ବର୍ଷ ଧରି ପ୍ରସ୍ତର ମୂର୍ତି ପରି ବସି ଆସିଛି?", "options": ["ବରଗଛ ମୂଳେ", "ଦାଣ୍ଡରେ", "ଛୋଟ ପିଣ୍ଡାରେ", "ଆସନରେ"], "answer": 2},
   {"text": "ଗ୍ରାମର ମଝିରେ କାହାର ଘର?", "options": ["ହରି", "ଗୋପାଳ", "ଗୋବିନ୍ଦା", "ଗଣେଶ"], "answer": 2},
   {"text": "ଗୋବିନ୍ଦା ଭାଇ ଲେଖକଙ୍କ ପାଖରେ କ'ଣ ବାଖ୍ୟା କରୁଥିଲା?", "options": ["ଭାଗବତ", "ମନବୋଧ ଚଉତିଶା", "ଗୀତା", "ପୁରାଣ"], "answer": 1},
@@ -164,7 +164,7 @@ const questions=[
   {"text": "ନୂଆ ମେଘକୁ କେଉଁମାନେ ଚାହିଁ ରୁହନ୍ତି?", "options": ["ଗ୍ରାମବାସୀ", "ପଲ୍ଲୀଜନ", "ଚାଷୀକୂଳ", "ଉପରୋକ୍ତ ସମସ୍ତ"], "answer": 3},
  
   {"text": "ରଜପର୍ବରେ ଗ୍ରାମବାସୀମାନେ କ'ଣ ଖେଳନ୍ତି?", "options": ["ଦୋଳି", "ପଶା", "ଯୁଆ", "କବାଡ଼ି"], "answer": 0},
-  {"text": "ଗ୍ରାମ ମଧ୍ୟରେ ଏକ ପରିବାରତ୍ବର ପରମ୍ପରା ସ୍ବରୂପ କେଉଁଟି?", "options": ["ମନବୋଧ ଚଉତିଶା ବାଖ୍ୟା ଶୁଣାଇବା", "ଜାତିବର୍ଣ୍ଣ ନିର୍ବିଶେଷ ଭାବରେ ପରସ୍ପର ସଂପର୍କ ରଖିବା", "ଅତିଥି ସମ୍ବାଦ", "ପର୍ବରେ ଭୁଲିଯିବା"], "answer": 1},
+  {"text": "ଗ୍ରାମ ମଧ୍ୟରେ ଏକ ପରିବାରତ୍ୱର ପରମ୍ପରା ସ୍ବରୂପ କେଉଁଟି?", "options": ["ମନବୋଧ ଚଉତିଶା ବାଖ୍ୟା ଶୁଣାଇବା", "ଜାତିବର୍ଣ୍ଣ ନିର୍ବିଶେଷ ଭାବରେ ପରସ୍ପର ସଂପର୍କ ରଖିବା", "ଅତିଥି ସମ୍ବାଦ", "ପର୍ବରେ ଭୁଲିଯିବା"], "answer": 1},
   {"text": "ଧରଣୀ ଶସ୍ୟଶ୍ୟାମଳା ହେବାରେ କାହାର ଶ୍ରମ ନିହିତ?", "options": ["ଶ୍ରମଜୀବିମାନଙ୍କ", "ନବଯୁବକଙ୍କ", "ନବାଗତମାନଙ୍କ", "ବୃଦ୍ଧମାନଙ୍କ"], "answer": 0},
   {"text": "ଗ୍ରାମର କର୍ମଯୋଜନାରେ କାହାର ସ୍ଥାନ ନାହିଁ?", "options": ["ନବଯୁବକ", "ଗୋବିନ୍ଦା ଭାଇ", "ଲେଖକ", "ସାର ମାଉସୀ"], "answer": 2},
   {"text": "ଗ୍ରାମ ଭୂମିର ପୂର୍ଣ୍ଣତା କେଉଁ ସମୟରେ?", "options": ["ଗ୍ରୀଷ୍ମ ଖରା", "ଜ୍ୟେଷ୍ଠ ବର୍ଷା", "ହେମନ୍ତ ସ୍ୱର୍ଣଶୀର୍ଷ ଧାନ", "ଶୀତ କାକର ବିନ୍ଦୁ"], "answer": 2},
@@ -177,10 +177,10 @@ const questions=[
   {"text": "ଦ୍ଵାରକାର ରାଜଭୋଗରେ କୃଷ୍ଣଙ୍କ ପାଦୁକା କିପରି ବର୍ଣ୍ଣ ଧାରଣ କରିଥିଲା?", "options": ["ଅଗ୍ନି ପରି", "ନବ ପୁଷ୍ପିତ ପଲ୍ଲବ", "ଆକାଶ ମେଘ", "ନବପଲ୍ଲବ ପରି ରକ୍ତାଭ"], "answer": 3},
   {"text": "ବୃନ୍ଦାବନର ପୁଷ୍ପିତ କଦମରେ ଆଜି ମଧ୍ୟ କିଏ ନୃତ୍ୟ କରିଥାଏ?", "options": ["ମୟୂର", "ହରିଣୀ", "ହଂସ", "ବନ୍ୟପକ୍ଷୀ"], "answer": 0},
   {"text": "ଯାହାର ଲୌହଶର ଶ୍ରୀକୃଷ୍ଣଙ୍କ ପଦବିଦ୍ଧ କରିଥିଲା?", "options": ["ବ୍ୟାଧ", "ଶତ୍ରୁ", "ମଦ୍ୟପ ବଂଶଧର", "ଅର୍ଜୁନ"], "answer": 0},
-  {"text": "ଏଟ୍ଲାସ ଦେବତା ଅଟନ୍ତି?", "options": ["ଭାରତୀୟ", "ମିଶରୀୟ", "ଗ୍ରୀସୀୟ", "ଇଉରୋପୀୟ"], "answer": 2},
+  {"text": "ଏଟ୍ଲାସ୍ କେଉଁମାନଙ୍କର ଦେବତା ଅଟନ୍ତି?", "options": ["ଭାରତୀୟ", "ମିଶରୀୟ", "ଗ୍ରୀସୀୟ", "ଇଉରୋପୀୟ"], "answer": 2},
   {"text": "ଗୋପପୁର ଓ ମଥୁରା ମଧ୍ୟରେ କେଉଁ ନଦୀ ବହି ଚାଲିଛି?", "options": ["ଗଙ୍ଗା", "ସରଜୁ", "ସରସ୍ୱତୀ", "ୟମୁନା"], "answer": 3},
   {"text": "ପ୍ରାବନ୍ଧିକ ତାଙ୍କ ଜନ୍ମଭୂମିକୁ କାହା ସହ ତୁଳନା କରିଛନ୍ତି?", "options": ["ପୃଥିବୀ ସହିତ", "ଆକାଶ ସହିତ", "ସୂର୍ଯ୍ୟ ସହିତ", "ମାତା, ଧାତ୍ରୀ ଓ ଶିକ୍ଷୟିତ୍ରୀ"], "answer": 3},
-  {"text": "ବଂଶୀ ସୁନିଲେ କାହାର ମନ ଅହେତୁକ ଓ ଅନାହୃତ ବ୍ୟଥାରେ ଭାରାକ୍ରାନ୍ତ ହୋଇଉଠେ?", "options": ["ଦ୍ବାରକାର ଅଷ୍ଟପାଟ ବଂଶୀ", "ଅନୁଢା ଗୋପକନ୍ୟା", "ମଧୁରା କିଶୋରୀ", "ଦ୍ବାରକା ନାରୀ"], "answer": 1},
+  {"text": "ବଂଶୀ ସୁଣିଲେ କାହାର ମନ ଅହେତୁକ ଓ ଅନାହୃତ ବ୍ୟଥାରେ ଭାରାକ୍ରାନ୍ତ ହୋଇଉଠେ?", "options": ["ଦ୍ବାରକାର ଅଷ୍ଟପାଟ ବଂଶୀ", "ଅନୁଢା ଗୋପକନ୍ୟା", "ମଧୁରା କିଶୋରୀ", "ଦ୍ବାରକା ନାରୀ"], "answer": 1},
   {"text": "କେଉଁ ଦେବତା ବିଶ୍ୱର ସମସ୍ତ ଭାର ବହନ କରି କୁବ୍ଜା ହୋଇଛନ୍ତି?", "options": ["ୟୀଶୁ", "ଏଟ୍ଲାସ", "କୃଷ୍ଣ", "ନାନକ"], "answer": 1}
 
 ];
@@ -280,4 +280,5 @@ updateProgress();
 </script>
 </body>
 </html>
+
 
