--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="or">
 <head>
   <meta charset="utf-8" />
-  <title>ଶ୍ରେଣୀ ୧୦ ଓଡ଼ିଆ ପରୀକ୍ଷା</title>
+  <title>bseodiahaodiatest</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
     :root{--orange:#d35400;--soft:#fff3e0;--btn:#e67e22}
@@ -96,7 +96,7 @@
 </head>
 <body>
   <header>
-    <h1> ଜନ୍ମଭୁମି </h1>
+    <h1> ଜନ୍ମଭୂମି </h1>
   </header>
 
   <div class="wrap">
@@ -271,7 +271,7 @@ function shareResult(){
   if(navigator.share){
     navigator.share({title:"ମୋ ଓଡ଼ିଆ ପରୀକ୍ଷା ଫଳାଫଳ",text:text,url:window.location.href});
   }else{
-    alert("ସେୟାର ସୁବିଧା ଏହି ଯନ୍ତ୍ରରେ ଉପଲବ୍ଧ ନୁହେଁ ।");
+    alert("ସେୟାର ସୁବିଧା ଏହି ଯନ୍ତ୍ରରେ ଉପଲବ୍ଧ ନୁହେଁ screen shoot ନେଇ share କରନ୍ତୁ।");
   }
 }
 showQuestion(1);
@@ -280,5 +280,6 @@ updateProgress();
 </script>
 </body>
 </html>
+
 
 
